--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>{{ page.title }}</title>
     <link rel='stylesheet' href='assets/css/styles.css'>
     <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,800,900|Open+Sans:300,400,700|Roboto:300,400,700" rel="stylesheet">
-    <!-- {% feed_meta %} -->
+    {% feed_meta %}
     {% seo %}
   </head>
   <body>
