--- a/_sass/nav.sass
+++ b/_sass/nav.sass
@@ -18,7 +18,8 @@ nav
   justify-content: space-between
 
   a
-    font-family: 'Roboto Light'
+    font-family: 'Roboto'
+    font-weight: 300
     color: $color1
     text-decoration: none
     padding-bottom: 3px
