--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,62 +1,3 @@
-$color1: #275cb2;
-$color2: #2599ce;
-$font-main: 'Roboto Light';
-$font-secondary: 'Open Sans';
-
-@mixin font($family: 'Open Sans', $size: 15px, $weight: normal) {
-  font-family: $family;
-  font-size: $size;
-  font-weight: $weight;
-}
-
-@mixin bigfont($family: 'Muli', $size: 25px, $weight: 400) {
-  font-family: $family;
-  font-size: $size;
-  font-weight: $weight;
-  margin-bottom: 15px;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html, body {
-  height: 100%;
-}
-
-html {
-  display: flex;
-  justify-content: center;
-}
-
-body {
-  width: 1000px;
-}
-
-h1 { @include bigfont; }
-h2 { @include font('Muli', 25px, 400); }
-h3 { @include font('Open Sans', 15px); margin-bottom: 5px; }
-p { @include font('Roboto', 14px, 300); }
-
-.row-container {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-}
-
-.content-box {
-  // border: 0.5px solid rgba(0, 0, 255, 0.01);
-  border-radius: 10px;
-  padding: 25px;
-  background-color: rgba(252, 253, 255, 0.1);
-  -webkit-box-shadow: 4px 6px 13px -7px rgba(222,222,222,0.6);
-  -moz-box-shadow: 4px 6px 13px -7px rgba(222,222,222,0.6);
-  box-shadow: 4px 6px 25px -6px rgba(222,222,222,0.6);
-  overflow: hidden;
-}
-
 .description { width: 100%; }
 .languages { width: 39.5%; }
 .classes { width: 59.5%; }
@@ -68,22 +9,15 @@ p { @include font('Roboto', 14px, 300); }
   .school-entry {
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
-    p {
-      font-size: 12px;
-      font-style: italic;
-    }
   }
+  p { font-weight: 200; line-height: 15px; margin-bottom: 10px; }
 }
 
 .skill-ratings {
   list-style-type: none;
-  font-family: 'Open Sans';
-  font-size: 15px;
   li {
     width: 100%;
-    margin-top: 10px;
-    @include font('Open Sans Medium');
+    margin-bottom: 10px;
   }
   .bar-container {
     margin: 5px 0px 5px 0px;
@@ -102,29 +36,11 @@ p { @include font('Roboto', 14px, 300); }
 
 .classes-list {
   list-style-type: none;
-  ul { width: 100%; }
+  width: 100%;
   li {
     @include font('Open Sans', 15px);
     display: flex;
     justify-content: space-between;
-    margin: 10px 0px;
-  }
-}
-
-.footer {
-  display: flex;
-  height: 60px;
-  justify-content: center;
-  align-items: center;
-
-  a {
-    margin: 0px 7px;
-    width: 20px;
-    height: 20px;
-    background-size: cover;
-  }
-
-  a:hover {
-    opacity: 0.5;
+    margin-bottom: 10px;
   }
 }
