--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
     <meta charset='utf-8'>
     <title>{{ page.title }}</title>
     <link rel='stylesheet' href='assets/css/styles.css'>
-    <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,800,900|Open+Sans:300,400,700|Roboto:300,400,700" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,800,900|Open+Sans:300,400,700|Roboto:300,400,700" rel="stylesheet"> -->
+    <link href="https://use.typekit.net/pod6gmm.css" rel="stylesheet">
     {% feed_meta %}
     {% seo %}
   </head>
