--- a/_sass/nav.sass
+++ b/_sass/nav.sass
@@ -18,8 +18,7 @@ nav
   justify-content: space-between
 
   a
-    font-family: 'Roboto'
-    font-weight: 300
+    @include font('roboto', 15px, 300)
     color: $color1
     text-decoration: none
     padding-bottom: 3px
@@ -29,4 +28,4 @@ nav
 
 .current
   opacity: 0.7
-  border-bottom: 1px solid #2599ce
+  border-bottom: 1px solid $color2
